package protocol;

message RPC_ConnNotifyOfflineReq {
    required int32 UID = 1;
    required string Url = 2;
}

message RPC_GetOnlineFromConnResp {
    repeated int32 ID = 1;
    repeated string Url = 2;
}